Resolved issue where text was overflowing on posts_show path

--- a/app/assets/stylesheets/_posts_projects.scss
+++ b/app/assets/stylesheets/_posts_projects.scss
@@ -48,6 +48,7 @@ $border: #E9E9E9;
 	hr {
 		margin: 3em auto;
 	}
+	word-wrap: break-word;
 }
 
 #share_box {
